...
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="TP5-VV-5qV" userLabel="Weight Stack">
                                <rect key="frame" x="176" y="257.5" width="123.5" height="31"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iNa-ha-La3">
                                        <rect key="frame" x="0.0" y="0.0" width="15.5" height="31"/>
                                        <accessibility key="accessibilityConfiguration" identifier="WeightLabel"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="Z5A-X6-sfx">
                                        <rect key="frame" x="23.5" y="0.0" width="100" height="32"/>
                                        <constraints>
                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="OgA-o4-1Nl"/>
                                        </constraints>
                                        <segments>
                                            <segment title="lbs"/>
                                            <segment title="kgs"/>
                                        </segments>
                                        <connections>
                                            <action selector="convertWeight:" destination="BYZ-38-t0r" eventType="valueChanged" id="RWW-nm-nTE"/>
                                        </connections>
                                    </segmentedControl>
                                </subviews>
...
                                <constraints>
                                    <constraint firstAttribute="height" constant="45" id="yEW-nX-Lu9"/>
                                </constraints>
                            </imageView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Liters" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C3l-PT-6Ag">
                                <rect key="frame" x="140.5" y="137" width="94.5" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="LitersLabel"/>
                                <fontDescription key="fontDescription" type="system" pointSize="40"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
...
