...
        informationTableView.delegate = self
        informationTableView.dataSource = self
        informationTableView.isScrollEnabled = false
        informationTableView.tableFooterView = UIView()
//        levelPicker.delegate = self
//        levelPicker.dataSource = self
//        lbskgsSegmentedControl.accessibilityIdentifier = "WeightSegmentedControl"
        updateViews()
        setUpSubViews()
    }

    private func updateViews() {
        if let surfers = fetchedResultController.fetchedObjects,
...
    }

    private func setUpSubViews() {
        view.addSubview(calculateButton)
        calculateButton.setTitle("Calculate", for: .normal)
        calculateButton.setTitleColor(.systemBlue, for: .normal)
        calculateButton.accessibilityIdentifier = "CalculateButton"
        calculateButton.addTarget(self, action: #selector(calculate), for: .touchUpInside)
        calculateButton.translatesAutoresizingMaskIntoConstraints = false

        NSLayoutConstraint.activate([
            calculateButton.topAnchor.constraint(equalTo: informationTableView.bottomAnchor, constant: 20),
            calculateButton.centerXAnchor.constraint(equalTo: view.centerXAnchor),
...
